Keep navigation compatible with older Android runtimes